--- a/lang/es.json
+++ b/lang/es.json
@@ -389,5 +389,7 @@
     "Your current payment method is :paypal.": "Su método de pago actual es :paypal.",
     "Your current payment method is a credit card ending in :lastFour that expires on :expiration.": "Su método de pago actual es una tarjeta de crédito que termina en :lastFour que vence el :expiration.",
     "Your registered VAT Number is :vatNumber.": "Su número VAT registrado es :vatNumber.",
-    "Zip \/ Postal Code": "Zip \/ Código postal"
+    "Zip \/ Postal Code": "Zip \/ Código postal",
+
+    "Welcome to the MAR system":"Bienvenido al sistema de MAR"
 }
