feat: validación en crud clientes y usuario

--- a/lang/es.json
+++ b/lang/es.json
@@ -402,6 +402,7 @@
     "Create User":"Crear Usuario",
     "Edit User":"Editar Usuario",
     "Show User":"Mostrar Usuario",
+    "Roles":"Roles",
     "Show":"Mostrar",
     "Customers List":"Lista de Clientes",
     "Customers":"Clientes",
