feat: tipo de cliente

--- a/lang/es.json
+++ b/lang/es.json
@@ -410,6 +410,9 @@
     "Create Customer":"Crear Cliente",
     "Edit Customer":"Editar Cliente",
     "Show Customer":"Mostrar Cliente",
+    "Type":"Tipo",
+    "Store":"Tienda",
+    "Municipality":"Municipalidad",
     "Document Type":"Tipo de Documento",
     "Document Number":"Número de Documento",
     "Phone":"Teléfono",
