feat: se agrego dni y turno a usuario

--- a/lang/es.json
+++ b/lang/es.json
@@ -403,7 +403,12 @@
     "Create User":"Crear Usuario",
     "Edit User":"Editar Usuario",
     "Show User":"Mostrar Usuario",
+    "DNI":"DNI",
     "Roles":"Roles",
+    "Shift":"Turno",
+    "Select a Shift":"Seleciona un Turno",
+    "Morning":"Mañana",
+    "Afternoon":"Tarde",
     "Show":"Mostrar",
     "Customers List":"Lista de Clientes",
     "Customers":"Clientes",
