Configurando variables de api sunat

--- a/lang/es.json
+++ b/lang/es.json
@@ -428,6 +428,7 @@
     "Products":"Productos",
     "Create New Product":"Crear Nuevo Producto",
     "Create Product":"Crear Producto",
+    "Select a Product":"Seleccione un Producto",
     "Types of Products":"Tipos de Productos",
     "Product Type List":"Lista de Tipos de Productos",
     "Create New Type":"Crear Nuevo Tipo",
