feat: api sunat ruc proveedor

--- a/lang/es.json
+++ b/lang/es.json
@@ -439,6 +439,7 @@
     "Create New Provider":"Crear Nuevo Proveedor",
     "Create Provider":"Crear Proveedor",
     "RUC":"RUC",
+    "Name - Business Name":"Nombre - Razón Social",
     "Provider Details":"Detalles del Proveedor",
     "Edit Provider":"Editar Proveedor"
 }
