feat: se cambio radio button por select

--- a/lang/es.json
+++ b/lang/es.json
@@ -404,11 +404,17 @@
     "Edit User":"Editar Usuario",
     "Show User":"Mostrar Usuario",
     "DNI":"DNI",
-    "Roles":"Roles",
     "Shift":"Turno",
-    "Select a Shift":"Seleciona un Turno",
+    "Select a shift":"Seleciona un turno",
+    "Complete":"Completo",
     "Morning":"Mañana",
     "Afternoon":"Tarde",
+    "Business":"Empresa",
+    "Select an option":"Seleccione una opción",
+    "Main":"Principal",
+    "Branch Office":"Sucursal",
+    "Roles":"Roles",
+    "Select a role":"Selecciona un rol",
     "Show":"Mostrar",
     "Customers List":"Lista de Clientes",
     "Customers":"Clientes",
