feat: Se agrego sucursales

--- a/lang/es.json
+++ b/lang/es.json
@@ -413,8 +413,16 @@
     "Select an option":"Seleccione una opción",
     "Main":"Principal",
     "Branch Office":"Sucursal",
+    "Select a branch office":"Seleccione una sucursal",
+    "Branch Offices":"Sucursales",
     "Roles":"Roles",
     "Select a role":"Selecciona un rol",
+    "Branch List":"Lista de Sucursales",
+    "Create New Branch Office":"Crear Nueva Sucursal",
+    "Create Branch Office":"Crear Sucursal",
+    "Department":"Departamento",
+    "Province":"Provincia",
+    "District":"Distrito",
     "Show":"Mostrar",
     "Customers List":"Lista de Clientes",
     "Customers":"Clientes",
