feat: component nav link toggle

--- a/lang/es.json
+++ b/lang/es.json
@@ -437,6 +437,8 @@
     "Document Number":"Número de Documento",
     "Phone":"Teléfono",
     "This is an optional field":"Este campo es opcional",
+    "Manage Products":"Gestionar Productos",
+    "Types":"Tipos",
     "List of Products":"Lista de Productos",
     "Product":"Producto",
     "Products":"Productos",
