feat: Select dinamico tipo de productos

--- a/lang/es.json
+++ b/lang/es.json
@@ -468,5 +468,6 @@
     "End Time":"Hora de Finalización",
     "":"",
     "Add Product":"Añadir Producto",
+    "Select a type of product":"Seleccione un tipo de producto",
     "Packages":"Paquetes"
 }
