feat: Crear acopio y ver datos en index

--- a/lang/es.json
+++ b/lang/es.json
@@ -466,7 +466,7 @@
     "Select a provider":"Seleccione un proveedor",
     "Start Time":"Hora de Inicio",
     "End Time":"Hora de Finalización",
-    "":"",
+    "Gathering of Products":"Acopio de Productos",
     "Add Product":"Añadir Producto",
     "Select a type of product":"Seleccione un tipo de producto",
     "Packages":"Paquetes",
