feat: buscar por dni y ruc

--- a/lang/es.json
+++ b/lang/es.json
@@ -471,6 +471,7 @@
     "Select a type of product":"Seleccione un tipo de producto",
     "Packages":"Paquetes",
     "Weight":"Peso",
+    "Date":"Fecha",
     "Carton Weight":"Peso de Cartón",
     "Plastic Weight":"Peso de Plástico",
     "Paper Weight":"Peso de Papel",
