feat: Detalles de usuario

--- a/lang/es.json
+++ b/lang/es.json
@@ -477,5 +477,8 @@
     "Paper Weight":"Peso de Papel",
     "Overall Weight":"Peso Total",
     "Operator":"Operario",
-    "Gathering Details":"Detalles del Acopio"
+    "Gathering Details":"Detalles del Acopio",
+    "About the user":"Sobre el usuario",
+    "User Information":"Información del Usuario",
+    "complete":"Completo"
 }
