feat: crear y editar conductor

--- a/lang/es.json
+++ b/lang/es.json
@@ -488,5 +488,8 @@
     "Travel List":"Lista de Viajes",
     "Travels":"Viajes",
     "Create New Travel":"Crear Nuevo Viaje",
-    "Create Trip":"Crear Viaje"
+    "Create Trip":"Crear Viaje",
+    "License Plate":"Placa",
+    "Freighter":"Fletero",
+    "Edit Driver":"Editar Conductor"
 }
