feat: licencia en conductor y origen en viaje

--- a/lang/es.json
+++ b/lang/es.json
@@ -485,6 +485,7 @@
     "Driver List":"Lista de Conductores",
     "Create New Driver":"Crear Nuevo Conductor",
     "Create Driver":"Crear Conductor",
+    "License":"Licencia",
     "Travel List":"Lista de Viajes",
     "Travels":"Viajes",
     "Create New Travel":"Crear Nuevo Viaje",
@@ -494,6 +495,7 @@
     "Edit Driver":"Editar Conductor",
     "Driver":"Conductor",
     "Select a driver":"Selecciona un conductor",
+    "Origin":"Origen",
     "Departure Date":"Fecha de Salida",
     "Arrival Date":"Fecha de Llegada",
     "Deliveries":"Entregas",
