feat: Grafico de acopio

--- a/lang/es.json
+++ b/lang/es.json
@@ -509,5 +509,6 @@
     "Create New Release":"Crear Nueva Liberación",
     "Lot":"Lote",
     "Quantity Released":"Cantidad Liberada",
-    "Observations":"Observaciones"
+    "Observations":"Observaciones",
+    "Gathering of the last 30 days":"Acopio de los ultimos 30 dias"
 }
