--- a/lang/es.json
+++ b/lang/es.json
@@ -504,11 +504,13 @@
     "Total Price":"Precio Total",
     "Select a customer":"Seleccione un cliente",
     "Price per Kilo":"Precio por Kilo",
-    "Release":"Libración",
+    "Release":"Liberación",
+    "Release List":"Lista de Liberación",
     "Create Release":"Crear Liberación",
     "Create New Release":"Crear Nueva Liberación",
     "Lot":"Lote",
     "Quantity Released":"Cantidad Liberada",
     "Observations":"Observaciones",
-    "Gathering of the last 30 days":"Acopio de los ultimos 30 dias"
+    "Gathering of the last 30 days":"Acopio de los ultimos 30 dias",
+    "Release of the last 30 days":"Liberación de los ultimos 30 dias"
 }
