valor del igv y detracción

--- a/lang/es.json
+++ b/lang/es.json
@@ -513,5 +513,6 @@
     "Observations":"Observaciones",
     "Gathering of the last 30 days":"Acopio de los ultimos 30 dias",
     "Release of the last 30 days":"Liberación de los ultimos 30 dias",
-    "Select a origin":"Seleccione un origen"
+    "Select a origin":"Seleccione un origen",
+    "Detraction":"Detracción"
 }
