feat: decrement stock en liberación

--- a/lang/es.json
+++ b/lang/es.json
@@ -510,6 +510,7 @@
     "Create New Release":"Crear Nueva Liberación",
     "Lot":"Lote",
     "Quantity to Release":"Cantidad a Liberar",
+    "Quantity Released":"Cantidad Liberada",
     "Current Stock":"Stock Actual",
     "Observations":"Observaciones",
     "Gathering of the last 30 days":"Acopio de los ultimos 30 dias",
