feat: Se quito eliminar

--- a/lang/es.json
+++ b/lang/es.json
@@ -519,5 +519,7 @@
     "Detraction":"Detracción",
     "The quantity to be released exceeds the current stock":"La cantidad a liberar supera el stock actual",
     "Cardboard gathering of the day":"Acopio de cartón del día",
-    "Plastic gathering of the day":"Acopio de plástico del día"
+    "Plastic gathering of the day":"Acopio de plástico del día",
+    "Travel Details":"Detalles de Viaje",
+    "Release Details":"Detalles de Liberación"
 }
