feat: G. de remisión transportista

--- a/lang/es.json
+++ b/lang/es.json
@@ -521,5 +521,6 @@
     "Cardboard gathering of the day":"Acopio de cartón del día",
     "Plastic gathering of the day":"Acopio de plástico del día",
     "Travel Details":"Detalles de Viaje",
-    "Release Details":"Detalles de Liberación"
+    "Release Details":"Detalles de Liberación",
+    "Carrier Guide":"G. transportista"
 }
